--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^3.2.5",
+    "monk": "^7.0.0",
     "morgan": "~1.9.1"
   }
 }
